changement images du site

--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -458,50 +458,50 @@
                         </div>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/entrainement-2019.jpg">
-                            <img data-index="0" src="../../assets/img/media/entrainement-2019.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur1.jpg">
+                            <img data-index="0" src="../../assets/img/judoka/joueur1.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>255 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/entrainement-mai-2014-1.jpg">
-                            <img data-index="1" src="../../assets/img/media/entrainement-mai-2014-1.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur2.jpg">
+                            <img data-index="1" src="../../assets/img/judoka/joueur2.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>333 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/entrainement-mai-2014-2.jpg">
-                            <img data-index="2" src="../../assets/img/media/entrainement-mai-2014-2.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur3.jpg">
+                            <img data-index="2" src="../../assets/img/judoka/joueur3.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>119 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/entrainement-mai-2014.jpg">
-                            <img data-index="3" src="../../assets/img/media/entrainement-mai-2014.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur4.jpg">
+                            <img data-index="3" src="../../assets/img/judoka/joueur4.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>55 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/groupe-judokas.jpg">
-                            <img data-index="4" src="../../assets/img/media/groupe-judokas.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur5.jpg">
+                            <img data-index="4" src="../../assets/img/judoka/joueur5.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>88 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/new-ceintures-noires.jpg">
-                            <img data-index="5" src="../../assets/img/media/new-ceintures-noires.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur6.jpg">
+                            <img data-index="5" src="../../assets/img/judoka/joueur6.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>163 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/petits-judokas.jpg">
-                            <img data-index="6" src="../../assets/img/media/petits-judokas.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur7.jpg">
+                            <img data-index="6" src="../../assets/img/judoka/joueur7.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>222 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/remise-noire-laurence.jpg">
-                            <img data-index="7" src="../../assets/img//media/remise-noire-laurence.jpg">
+                        <a class="media photo" href="../../assets/img/judoka/joueur8.jpg">
+                            <img data-index="7" src="../../assets/img/judoka/joueur8.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>300 j'aime</span>
                     </div>
@@ -512,74 +512,74 @@
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>356 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/judoka/ChristianBohn.jpg">
-                            <img data-index="9" src="../../assets/img/judoka/ChristianBohn.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi1.jpg">
+                            <img data-index="9" src="../../assets/img/resultat/tournoi1.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>143  j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/judoka/JackyKremer.jpg">
-                            <img data-index="10" src="../../assets/img/judoka/JackyKremer.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi2.jpg">
+                            <img data-index="10" src="../../assets/img/resultat/tournoi2.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>168 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/judoka/LaurenceCalais.jpg">
-                            <img data-index="11" src="../../assets/img/judoka/LaurenceCalais.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi3.jpg">
+                            <img data-index="11" src="../../assets/img/resultat/tournoi3.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>131 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/judoka/PascalScheaffer.jpg">
-                            <img data-index="12" src="../../assets/img/judoka/PascalScheaffer.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi4.jpg.jpg">
+                            <img data-index="12" src="../../assets/img/resultat/tournoi4.jpg.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>199 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/judoka/ValentinDiedat.jpg">
-                            <img data-index="13" src="../../assets/img/judoka/ValentinDiedat.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi5.jpg">
+                            <img data-index="13" src="../../assets/img/resultat/tournoi5.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>298 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/assemblée.jpg">
-                            <img data-index="14" src="../../assets/img/media/assemblée.jpg">
+                        <a class="media photo" href="../../assets/img/resultat/tournoi6.jpg">
+                            <img data-index="14" src="../../assets/img/resultat/tournoi6.jpg">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>160 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/stage-petits.jpg">
-                            <img data-index="15" src="../../assets/img/media/stage-petits.jpg">
+                        <a class="media photo" href="../../assets/img/ceintures/Ceinture_blanche.png">
+                            <img data-index="15" src="../../assets/img/ceintures/Ceinture_blanche.png">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>105 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/remise-enfant.jpg">
-                            <img data-index="16" src="../../assets/img/media/remise-enfant.jpg">
+                        <a class="media photo" href="../../assets/img/ceintures/Ceinture_bleue.png">
+                            <img data-index="16" src="../../assets/img/ceintures/Ceinture_bleue.png">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>318 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/new-ceintures-noires.jpg">
-                            <img data-index="17" src="../../assets/img/media/new-ceintures-noires.jpg">
+                        <a class="media photo" href="../../assets/img/ceintures/Ceinture_jaune.png">
+                            <img data-index="17" src="../../assets/img/ceintures/Ceinture_jaune.png">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>200 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/groupe-adulte.jpg">
-                            <img data-index="18" src="../../assets/img/media/groupe-adulte.jpg">
+                        <a class="media photo" href="../../assets/img/ceintures/Ceinture_orange.png">
+                            <img data-index="18" src="../../assets/img/ceintures/Ceinture_orange.png">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>241 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/media/ceintures-black.jpg">
-                            <img data-index="19" src="../../assets/img/media/ceintures-black.jpg">
+                        <a class="media photo" href="../../assets/img/ceintures/Ceinture_marron.png">
+                            <img data-index="19" src="../../assets/img/ceintures/Ceinture_marron.png">
                         </a>
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>128 j'aime</span>
                     </div>
                     <div class="media-content">
-                      <a class="media photo" href="../../assets/img/media/senior.jpg">
-                          <img data-index="20" src="../../assets/img/media/senior.jpg">
+                      <a class="media photo" href="../../assets/img/ceintures/Ceinture_noire.png">
+                          <img data-index="20" src="../../assets/img/ceintures/Ceinture_noire.png">
                       </a>
                       <span class="nb-likes"><i class="far fa-heart coeur"></i>188 j'aime</span>
                     </div>
