--- a/html/encyclopedie.html
+++ b/html/encyclopedie.html
@@ -452,7 +452,7 @@
                         <a href="encyclopedie/histoire-club.html" class="lien-page">
                             <h3 class="titre-lien">L'HISTOIRE DU CLUB</h3>
                             <div class="bloc-img">
-                                <img src="../assets/img/encyclopedie/histoire-club.png" alt="portrait des fondateurs du Judo-Club" class="image-article">
+                                <img src="../assets/img/resultat/tournoi4.jpg" alt="portrait des fondateurs du Judo-Club" class="image-article">
                             </div>
                         </a>
                     </article>
