--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <div class="activites">
                     <article class="enfants article">
                         <div class="lien-equipe">
-                            <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono"
+                            <img src="assets/img/resultat/tournoi4.jpg" alt="des enfants en kimono"
                                 class="img-activite">
                         </div>
                         <div class="info-activite">
@@ -461,7 +461,7 @@
                     </article>
                     <article class="ados article">
                         <div class="lien-equipe">
-                            <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono"
+                            <img src="assets/img/resultat/tournoi3.jpg" alt="des ados en kimono"
                                 class="img-activite">
                         </div>
                         <div class="info-activite">
@@ -478,7 +478,7 @@
                     </article>
                     <article class="adultes article">
                         <div class="lien-equipe">
-                            <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange"
+                            <img src="assets/img/resultat/tournoi2.jpg" alt="les judokas de Fénétrange"
                                 class="img-activite">
                         </div>
                         <div class="info-activite">
@@ -495,7 +495,7 @@
                     </article>
                     <article class="senior article">
                         <div class="lien-equipe">
-                            <img src="assets/img/media/senior.jpg" alt="les seniors" class="img-activite">
+                            <img src="assets/img/resultat/tournoi1.jpg" alt="les seniors" class="img-activite">
                         </div>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités Atelier Senior</h3>
